--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,14 @@
     <string name="sign_up_with_google">Sign up with Google</string>
     <string name="default_web_client_id">335330685775-ngqfr5vqupj0smekoc1uvdjq5vmibkud.apps.googleusercontent.com</string>
     <string name="or">or</string>
+    <string name="you_still_do_not_have_any_bill_registered">You still do not have any bill registered</string>
+    <string name="my_bills">My Bills</string>
+    <string name="my_spendings">My Spendings</string>
+    <string name="income">Income</string>
+    <string name="calendar">Calendar</string>
+    <string name="account">Account</string>
+    <string name="incoming">Incoming</string>
+    <string name="due">Due</string>
+    <string name="reocurring">Reocurring</string>
+    <string name="paid">Paid</string>
 </resources>
