arreglado bugs en createBills

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="account">Account</string>
     <string name="incoming">Incoming</string>
     <string name="due">Due</string>
-    <string name="reocurring">Reocurring</string>
+    <string name="recurring">Recurring</string>
     <string name="paid">Paid</string>
     <string name="required" />
     <string name="Title" />
