--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,6 @@
     <string name="vEndor">Vendor:</string>
     <string name="CaTegory">Category:</string>
     <string name="TiTle">Title:</string>
+    <string name="select_vendor">Select Vendor</string>
+
 </resources>
