--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,8 @@
     <string name="vEndor">Vendor:</string>
     <string name="CaTegory">Category:</string>
     <string name="TiTle">Title:</string>
-    <string name="select_vendor">Select Vendor</string>
-
+    <string name="purchase_datee">Purchase date</string>
+    <string name="details">Details</string>
+    <string name="titledialog">Title</string>
+    <string name="categorydbx">Category</string>
 </resources>
