--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,9 +34,13 @@
     <string name="save">Save</string>
     <string name="Paid">Paid</string>
     <string name="Amount">Amount</string>
+    <string name="Attachment">Attachment</string>
     <string name="create_new_bill">Create new Bill</string>
+    <string name="create_new_spending">Create new Spending</string>
     <string name="purchase_date">Purchase date</string>
+    <string name="Date">date</string>
     <string name="comments">Comments</string>
+    <string name="comment">Comment</string>
     <string name="commentts">Comments:</string>
     <string name="purchase_Date">Purchase date:</string>
     <string name="pAid">Paid:</string>
@@ -46,6 +50,9 @@
     <string name="TiTle">Title:</string>
     <string name="purchase_datee">Purchase date</string>
     <string name="details">Details</string>
+    <string name="Upload">Upload</string>
     <string name="titledialog">Title</string>
     <string name="categorydbx">Category</string>
+    <string name="essential">Essential</string>
+    <string name="non_essential">Non-Essential</string>
 </resources>
