subcategory spendings working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="create_new_bill">Create new Bill</string>
     <string name="create_new_spending">Create new Spending</string>
     <string name="purchase_date">Purchase date</string>
-    <string name="Date">date</string>
+    <string name="Date">Date</string>
     <string name="comments">Comments</string>
     <string name="comment">Comment</string>
     <string name="commentts">Comments:</string>
