alarm icon & main menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="purchase_datee">Purchase date</string>
     <string name="details">Details</string>
     <string name="Upload">Upload</string>
+    <string name="alarm">Alarm</string>
     <string name="titledialog">Title</string>
     <string name="categorydbx">Category</string>
     <string name="essential">Essential</string>
