edit completed & paid started

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="delete_income">delete income</string>
     <string name="previous_month">previous month</string>
     <string name="next_month">next month</string>
+    <string name="mark_as_paid">mark as paid</string>
 </resources>
