--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,16 +36,16 @@
     <string name="Paid">Paid</string>
     <string name="Amount">Amount</string>
     <string name="Attachment">Attachment</string>
-    <string name="create_new_bill">Create new Bill</string>
-    <string name="create_new_spending">Create new Spending</string>
+    <string name="create_new_Open_Payment">Create new Open Payment</string>
+    <string name="create_new_Closed_Payment">Create new Closed Payment</string>
     <string name="create_new_income">Create new Income</string>
     <string name="purchase_date">Purchase date</string>
     <string name="Date">Date</string>
     <string name="comments">Comments</string>
     <string name="comment">Comment</string>
     <string name="commentts">Comments:</string>
-    <string name="purchase_Date">Date of Purchase</string>
-    <string name="income_date">Date of Income</string>
+    <string name="purchase_Date">Date of Purchase:</string>
+    <string name="income_date">Date of Income:</string>
     <string name="pAid">Paid:</string>
     <string name="aMount">Amount:</string>
     <string name="vEndor">Vendor:</string>
