--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="notification_details">Notification Details</string>
+    <string name="main">Main</string>
     <string name="app_name">SmartStack Solutions</string>
     <string name="target_name">Target Name</string>
     <string name="log_in">Log in</string>
